<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NKU Parking</string>
    <string name="action_map">Map</string>
    <string name="action_directions">Directions</string>
    <string name="action_search">Search</string>
    <string name="action_status">Status</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="hello_world">Hello world!</string>
    <string name="userlab">Username:</string>
    <string name="passlab">Password:</string>
    <string name="userhint">Username</string>
    <string name="passhint">Password</string>
    <string name="loginbutton">Login</string>
    <string name="regbutton">Register</string>
    <string name="welcomelab">NKU Parking</string>
    <string name="registerlab">Registration Page</string>
    <string name="firstname">First Name:</string>
    <string name="lastname">Last Name:</string>
    <string name="fnamehint">First Name</string>
    <string name="lnamehint">Last Name</string>
    
    <string name="reguserlab">Username:</string>
    <string name="regpasslab">Password:</string>
    <string name="registerhint">5 char minimum</string>
    <string name="retypepass">Re-type Password</string>
    <string name="retypepasslab">Password:</string>
    <string name="reguserbutton">Register and Login</string>
    <string name="emailLab">Email:</string>
    <string name="emailField">Your Email</string>
    <string name="spinnertext">Classification:</string>
    
    <string name="directions_page">Directions Page</string>
    <string name="status_page">Status Page</string>
    <string name="lot_status_page">Lot Status Page</string>
    <string name="space_status_page">Space Status Page</string>
    <string name="settings_page">Settings Page</string>
    
    <string name="agreementText">I agree that I am solely responsible if I use this app while driving.</string>
    <string name="autoLoginText">Save username and password on the device and auto login each time</string>
    <string name="disclaimer">\* Clicking \'Register and Login\' will automatically save your username and password each time you use the app, to change this go to the settings menu.</string>
	
    <string name="search_title">Search</string>
    <string name="search_option_one">Any open space</string>
	<string name="search_option_two">A space in lot:</string>
	<string name="status_button">View Lot</string>
	<string name="reserve_button">Reserve</string>
	<string name="directions_button">Directions</string>
	<string name="taken_button">Taken</string>
	<string name="searchspinnertext">Lot</string>
	
	<string name="title_lot">Lot:</string>
    <string name="statphl">#</string>
    <string name="statphb">Waiting</string>
    
</resources>