<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_map"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_map"/>
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_search"/>
	
	<item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_refresh"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>