<!--
  activity_main.xml
  
  Implements the main activity of the mobile application.
  
  -Jordan Bossman
  
  Copyright 2014 CSCGroup5
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nkugold" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >

        <TextView
            android:id="@+id/welcomelab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/welcomelab"
            android:textSize="35sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/toplayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcomelab"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="35dp"
            android:paddingBottom="15dp" >

            <TextView
                android:id="@+id/userLab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="35dp"
                android:layout_marginTop="20dp"
                android:text="@string/userlab"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/passLab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_below="@id/userLab"
                android:text="@string/passlab"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/userField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/passField"
                android:layout_alignBaseline="@+id/userLab"
                android:layout_alignBottom="@+id/userLab"
                android:layout_toRightOf="@+id/userLab"
                android:ems="10"
                android:hint="@string/userhint"
                android:inputType="text" />

            <EditText
                android:id="@+id/passField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/passLab"
                android:layout_alignLeft="@id/userField"
                android:ems="10"
                android:hint="@string/passhint"
                android:inputType="textPassword" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottomlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toplayout"
            android:layout_centerHorizontal="true" >

            <Button
                android:id="@+id/regbutton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="registerUser"
                android:text="@string/regbutton" />

            <Button
                android:id="@+id/button1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/regbutton"
                android:onClick="loginUser"
                android:text="@string/loginbutton" />
        </RelativeLayout>
        
    </RelativeLayout>

</ScrollView>