<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/unavailable" >

    <ScrollView
        android:id="@+id/statusLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@color/generic" >

        <TableLayout
            android:id="@+id/mytablelayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/occupiedbuttonstatus"
        style="@style/btnStyleOrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/reservebuttonstatus"
        android:onClick="markOccupied"
        android:text="@string/taken_button"
        android:textColor="@color/generic" />

    <Button
        android:id="@+id/reservebuttonstatus"
        style="@style/btnStyleOrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/directionsbuttonstatus"
        android:text="@string/reserve_button"
        android:textColor="@color/generic" />

    <Button
        android:id="@+id/directionsbuttonstatus"
        style="@style/btnStyleOrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:onClick="loadDirs"
        android:text="@string/directions_button"
        android:textColor="@color/generic" />

    <TextView
        android:id="@+id/lot_name_title_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/occupiedbuttonstatus"
        android:layout_alignBottom="@+id/occupiedbuttonstatus"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="14dp"
        android:text="@string/title_lot"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/generic" />

    <TextView
        android:id="@+id/lot_name_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lot_name_title_status"
        android:layout_alignBottom="@+id/lot_name_title_status"
        android:layout_toRightOf="@+id/lot_name_title_status"
        android:text="@string/statphl"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/generic" />

</RelativeLayout>