<!--
  register_page.xml
  
  Shows the registration page for a new user of the app.
  
  -Jordan Bossman
  
  Copyright 2014 CSCGroup5
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registrationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nkugold" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".RegistrationActivity" >

        <TextView
            android:id="@+id/registerlab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/registerlab"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!--RelativeLayout
            android:id="@+id/namelayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerlab"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="35dp"
            android:paddingBottom="15dp" >

            <TextView
                android:id="@+id/firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="35dp"
                android:layout_marginTop="20dp"
                android:text="@string/firstname"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_below="@id/firstname"
                android:text="@string/lastname"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/firstnamefield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/lastnamefield"
                android:layout_alignBaseline="@+id/firstname"
                android:layout_alignBottom="@+id/firstname"
                android:layout_toRightOf="@+id/firstname"
                android:ems="10"
                android:hint="@string/fnamehint"
                android:inputType="text" />

            <EditText
                android:id="@+id/lastnamefield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/lastname"
                android:layout_alignLeft="@id/firstnamefield"
                android:ems="10"
                android:hint="@string/lnamehint"
                android:inputType="text" />
        </RelativeLayout-->
        
        <RelativeLayout
            android:id="@+id/userpasslayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerlab"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp" >

            <TextView
                android:id="@+id/reguserlab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/reguserlab"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/regpasslab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_alignParentTop="false"
                android:layout_below="@id/reguserlab"
                android:text="@string/regpasslab"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/reguserfield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/regpassfield"
                android:layout_alignBaseline="@+id/reguserlab"
                android:layout_alignBottom="@+id/reguserlab"
                android:layout_toRightOf="@+id/reguserlab"
                android:ems="10"
                android:hint="@string/registerhint"
                android:inputType="text" />

            <EditText
                android:id="@+id/regpassfield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/regpasslab"
                android:layout_alignLeft="@id/reguserfield"
                android:ems="10"
                android:hint="@string/registerhint"
                android:inputType="textPassword" />
            
            <TextView
                android:id="@+id/retypepasslab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_below="@id/regpasslab"
                android:text="@string/retypepasslab"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp" />
                        
            <EditText
                android:id="@+id/retypepassfield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/retypepasslab"
                android:layout_below="@+id/regpassfield"
                android:layout_toRightOf="@+id/retypepasslab"
                android:ems="10"
                android:hint="@string/retypepass"
                android:inputType="textPassword" />
            
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/spinnerlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userpasslayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >
           
            <TextView
                android:id="@+id/spinnerlab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spinnertext"
                android:layout_alignParentLeft="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <Spinner
                android:id="@+id/class_spinner"
                android:layout_width="250dp"
                android:layout_height="fill_parent"
                android:layout_alignBaseline="@id/spinnerlab"
                android:layout_toRightOf="@id/spinnerlab" />
            
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/agreelayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerlayout"
            android:layout_centerHorizontal="true" >

			<CheckBox 
			    android:id="@+id/agreementbox"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/agreementText"
			    android:onClick="agreementClicked" />
			
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/bottomlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/agreelayout"
            android:layout_centerHorizontal="true" >

            <Button
                android:id="@+id/registerbutton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:onClick="register"
                android:text="@string/reguserbutton" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/disclaimerLayout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bottomlayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/disclaimerLab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="15sp" />
        </RelativeLayout>
        
    </RelativeLayout>

</ScrollView>